[Icon view] Always open KCMs on single-click

Now that we're clarified that the double-click setting is only supposed
to apply to file and folder views, we can make System Settings' icon
grid always activate KCMs on single-click (which is what people seem to
expect even when using the systemwide double-click setting) because it's
not a file or folder view.

BUG: 377309
FIXED-IN: 5.21