icons/IconMode.cpp
@@ -194,6 +194,8 @@ void IconMode::initWidget()
     d->categoryView->setModel( d->proxyModel );
     connect( d->categoryView, &QAbstractItemView::activated,
              this, &IconMode::changeModule );
+    connect( d->categoryView, &QAbstractItemView::clicked,
+             this, &IconMode::changeModule );
 
     d->mainWidget->addWidget( d->categoryView );
     d->mainWidget->addWidget( d->moduleView );
